# NailBound

Documentation/: AgnoneChangeLog11.25.txt  NailBound.rtf  ProjectLinks.txt
NailBound/: NailBound.uproject
NailBound/Config/: DefaultEditor.ini  DefaultEngine.ini
NailBound/Content/: hexSprite_Blueprint.uasset  nailGun.uasset  nailMech.uasset  nailProjectile.uasset
NailBound/Content/2DSideScrollerBP/: eJwNyMENhCAQAMBeKAAEBMFmzAYRjCCEXXOPy_V-znO-7BmFrSwTdVyF2E8MbewcqQ1IkafWUonQT-ShVQFEEHKNN6FQ86K9t1ZLORlntXVCGT1p76SanfGL9G_h9ZRSY8jbB8q1HQNqlLzfif3-H.u  eJwNyMENhCAQAMBeKAAEBMFmzAYRjCCEXXOPy_V-znO-7BmFrSwTdVyF2E8MbewcqQ1IkafWUonQT-ShVQFEEHKNN6FQ86K9t1ZLORlntXVCGT1p76SanfGL9G_h9ZRSY8jbB8q1HQNqlLzfif3-H6c  hexMapBP.uasset  hexSprite.uasset
NailBound/Content/HUD/: ChatText.uasset  ChatWindow.uasset  GameplayChat.uasset  HealthHud.uasset  LoadingScreen.uasset  MainHud.uasset  Main_HUD.uasset  SummonerSpells.uasset  TrainingPauseMenu.uasset  enemyHealth.uasset  mainMenu.uasset  pauseMenu.uasset
NailBound/Content/LobbyUI/: CharacterSelect.uasset  ConnectedPlayer.uasset  GameSettings.uasset  LobbyMenu.uasset  PlayerButton.uasset
NailBound/Content/MainMenuUI/: ErrorDialogue.uasset  GameSettings.uasset  HostMenu.uasset  MMGameSettings.uasset  MainMenu2.uasset  OptionsMenu.uasset  PlayerSettings.uasset  ServerMenu.uasset
NailBound/Saved/Autosaves/: PackageRestoreData.json
WormsTerrainSF2.0-Src/: CMakeLists.txt
WormsTerrainSF2.0-Src/include/: particle.hpp  terrain.hpp
WormsTerrainSF2.0-Src/src/: Main.cpp  particle.cpp  terrain.cpp
(+1045 files in other folders)
